<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral95"
    android:onClick="guardarDatos"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-299dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titulo"
                android:textAlignment="center"
                android:textSize="34sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="16dp">

                <Space
                    android:layout_width="350dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_weight="11"
                        android:text="@string/dtosPErsonales"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:autofillHints="false"
                        android:ems="10"
                        android:hint="@string/Nombre"
                        android:inputType="text"
                        android:textColorHint="@color/material_dynamic_neutral60" />

                    <EditText
                        android:id="@+id/editTextApellidoP"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:autofillHints="false"
                        android:ems="10"
                        android:hint="@string/ApellidoP"
                        android:inputType="text"
                        android:textColorHint="@color/material_dynamic_neutral60" />

                    <EditText
                        android:id="@+id/editTextApellidoM"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:autofillHints="false"
                        android:ems="10"
                        android:hint="@string/ApellidoM"
                        android:inputType="text"
                        android:textColorHint="@color/material_dynamic_neutral60" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="11"
                        android:text="@string/Fecha_naci" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Dia"
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/Mes"
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Anio"
                            android:textAlignment="textStart" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/dayPicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="6"


                            android:descendantFocusability="blocksDescendants" />

                        <Spinner
                            android:id="@+id/spinnerMes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:entries="@array/Meses"

                            android:spinnerMode="dropdown" />

                        <NumberPicker
                            android:id="@+id/yearPikers"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="6"


                            android:descendantFocusability="blocksDescendants" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="25dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:layout_marginBottom="0dp"
                        android:text="Selecciona color favorito"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:id="@+id/colorSelector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:padding="50px">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="80dp"
                                android:background="#FFFFFF"
                                android:orientation="vertical">

                                <View
                                    android:id="@+id/btnColorPreview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:gravity="center">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="#"
                                        android:textColor="#FFFFFF"
                                        android:textSize="20sp" />

                                    <EditText
                                        android:id="@+id/strColor"
                                        android:layout_width="150sp"
                                        android:layout_height="wrap_content"
                                        android:imeOptions="actionDone"
                                        android:maxLength="8"
                                        android:padding="5sp"
                                        android:text="FFFF0000"
                                        android:textAlignment="center"
                                        android:textColor="#000000"
                                        android:textSize="20sp" />
                                </LinearLayout>
                            </LinearLayout>

                            <SeekBar
                                android:id="@+id/colorR"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:padding="30px"
                                android:progress="255" />

                            <SeekBar
                                android:id="@+id/colorG"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:padding="30px"
                                android:progress="0" />

                            <SeekBar
                                android:id="@+id/colorB"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:layout_weight="0.9"
                                android:padding="30px"
                                android:progress="0" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30px"
                                android:gravity="center"
                                android:orientation="horizontal"/>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

                <Space
                    android:layout_width="350dp"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="25dp"
                android:visibility="gone"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/IVPreviewImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/BSelectImage" />

                    <Button
                        android:id="@+id/BSelectImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:text="Selecciona imagen"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="350dp"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:onClick="guardarDatos"
                android:text="Enviar" />

            <Button
                android:id="@+id/buttonActualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:onClick="guardarDatos"
                android:text="Actualizar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:onClick="cambiar"
                android:text="Consultar Datos" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>